--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,14 @@
 name = "breakpoint_audio_player"
 version = "0.1.0"
 edition = "2021"
+author = "ReverseCRYstal"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 eframe = "0.21.3"
 rodio = "0.17.1"
+rfd = "0.11.3"
 
 [dependencies.windows]
 version = "0.46.0"
