--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,7 @@ rfd = "0.11.3"
 
 [dependencies.windows]
 version = "0.46.0"
-features = ["Win32_UI_WindowsAndMessaging"]
+features = [
+    "Win32_UI_WindowsAndMessaging", 
+    "Win32_Foundation"
+]
