--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,18 +9,14 @@ author = "ReverseCRYstal"
 [dependencies]
 eframe = "0.21.3"
 rfd = "0.11.3"
+rodio = "0.17.1"
+mp3-duration = "0.1.10"
 
 [dependencies.windows]
 version = "0.46.0"
 features = [
     "Win32_UI_WindowsAndMessaging", 
     "Win32_Foundation"
-]
-
-[dependencies.rodio]
-version = "0.17.1"
-features = [
-    "minimp3"
 ]
 
 [profile.release]
